Resolves: tdf#88911 Crash when dragging unsupported url to navigator pane

Change-Id: I9d4fc8e3edac699c8543ab9dce8d0e35bbf40e5b